[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/HUD/Textures/shield_bar_fill.png" type="Texture" id=1]
[ext_resource path="res://UI/HUD/Textures/shield_bar_bord.png" type="Texture" id=2]
[ext_resource path="res://UI/HUD/Textures/hull_bar_fill.png" type="Texture" id=3]
[ext_resource path="res://UI/HUD/Textures/hull_bar_bord.png" type="Texture" id=4]
[ext_resource path="res://UI/HUD/Textures/energy_bar.png" type="Texture" id=5]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=6]
[ext_resource path="res://Scripts/UI/CurrencyRichText.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Hit"
step = 0.03
tracks/0/type = "bezier"
tracks/0/path = NodePath("Shields:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.06, 0.99 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Shields:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.06, 0.99 )
}

[sub_resource type="Animation" id=2]
resource_name = "Hit"
step = 0.03
tracks/0/type = "bezier"
tracks/0/path = NodePath("Health:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.06, 0.99 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Health:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.06, 0.99 )
}

[sub_resource type="Animation" id=3]
length = 1.5
step = 0.03
tracks/0/type = "bezier"
tracks/0/path = NodePath("HudVbox/ShieldHBox:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 0.96, 1.05, 1.11, 1.32 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("HudVbox/HealthHbox:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.63, 1.02, 1.08, 1.2, 1.26, 1.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("HudVbox/EnergyHbox:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.78, 1.11, 1.14, 1.41 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("HudVbox/CurrencyHBox:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.11, 1.5 )
}

[node name="HUD" type="MarginContainer"]
margin_right = 260.0
margin_bottom = 135.0
rect_min_size = Vector2( 240, 135 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HudVbox" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 125.0

[node name="ShieldHBox" type="HBoxContainer" parent="HudVbox"]
margin_right = 240.0
margin_bottom = 16.0

[node name="Shields" type="TextureProgress" parent="HudVbox/ShieldHBox"]
margin_right = 240.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 100, 8 )
value = 95.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HudVbox/ShieldHBox"]
anims/Hit = SubResource( 1 )

[node name="HealthHbox" type="HBoxContainer" parent="HudVbox"]
margin_top = 20.0
margin_right = 240.0
margin_bottom = 36.0

[node name="Health" type="TextureProgress" parent="HudVbox/HealthHbox"]
margin_right = 240.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 100, 8 )
value = 86.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HudVbox/HealthHbox"]
anims/Hit = SubResource( 2 )

[node name="EnergyHbox" type="HBoxContainer" parent="HudVbox"]
margin_top = 40.0
margin_right = 240.0
margin_bottom = 48.0

[node name="Energy" type="TextureProgress" parent="HudVbox/EnergyHbox"]
margin_right = 176.0
margin_bottom = 8.0
value = 65.0
texture_progress = ExtResource( 5 )

[node name="CurrencyHBox" type="HBoxContainer" parent="HudVbox"]
margin_top = 52.0
margin_right = 240.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 12 )

[node name="CurrencyRichText" type="RichTextLabel" parent="HudVbox/CurrencyHBox"]
margin_right = 240.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[color=yellow]$[/color]100,000"
text = "$100,000"
scroll_active = false
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Initialize"
anims/Initialize = SubResource( 3 )
